test/spec/switch.txt
;;; EXE: test/run-d8.py
;;; FLAGS: --spec
;;; STDIN_FILE: third_party/testsuite/switch.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/switch.wast:135:72: case variable out of range (max 0)
...module (func (tableswitch (i32.const 0) (table) (case 0)))) "invalid target")
                                                         ^
assert_invalid error:
  third_party/testsuite/switch.wast:136:72: case variable out of range (max 1)
...(func (tableswitch (i32.const 0) (table) (case 1) (case)))) "invalid target")
                                                  ^
23/23 tests passed.
;;; STDOUT ;;)
